<resources>
    <string name="app_name">Elin-Link</string>
    <string name="scan">Scan</string>
    <string name="disconnect">Disconnect</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="devices">Devices</string>
    <string name="serial_log">Serial Log</string>
    <string name="command_hint">Type a command\u2026</string>
    <string name="connected_to">Connected to %1$s</string>
    <string name="status_idle">Status: Idle</string>
    <string name="status_scanning">Status: Scanning\u2026</string>
    <string name="status_connecting">Status: Connecting\u2026</string>
    <string name="status_connected">Status: Connected</string>
    <string name="status_disconnected">Status: Disconnected</string>
    <string name="add_bar">+ Bar</string>
    <string name="add_meter">+ Meter</string>
    <string name="add_slider">+ Slider</string>
    <string name="add_switch">+ Switch</string>
    <string name="send_controls">Send controls</string>
    <string name="terminal">Terminal</string>
    <string name="dashboard">Dashboard</string>
    <string name="serial_terminal">Serial Terminal</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="theme">Toggle theme</string>
    <string name="help">Usage guide</string>
    <string name="empty_dashboard">No gauges yet.\nTap \u201c+ Bar\u201d or \u201c+ Meter\u201d to add one.</string>
</resources>
